--- a/packages/storybook-composition/package.json
+++ b/packages/storybook-composition/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6005 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token 79c1ed3f65e5"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,7 @@
     "@storybook/addon-links": "^6.1.20",
     "@storybook/node-logger": "^6.1.20",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.20"
+    "@storybook/react": "^6.1.20",
+    "chromatic": "^5.6.3"
   }
 }
