--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6007 -s public,./src/assets",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook  -s ./src/assets public -o ./storybook-static"
   },
   "eslintConfig": {
     "extends": [
